tests/unit-fail/j047a.ref
Error: CER4
Description: Dereferencing a pointer past the end of an array.
Type: Undefined behavior.
See also: C11 sec. 6.5.6:8
  at main(j047a.c:3)
  at <file-scope>(<unknown>)
