tests/unit-fail/j047a.c
int main(void) {
      int a = 5;
      *(&a + 1);
      return 0;
}
